--- a/about.html
+++ b/about.html
@@ -1,36 +1,33 @@
 ---
-title: 关于珠海GDG
+title: 关于
 layout: page
 comments: yes
 ---
 
 <article class="listing fn-clear"> 
-  <h2>GDG ZhuHai</h2>
+  <h2>阅读邻居</h2>
   <p><pre>
-- 我们是来自中国南方美丽的滨海城市珠海的开发者们,大学生们和高校教师们,以及IT企业职业人士,
-- 我们爱好学习和利用各种谷歌开发技术,去实现基于互联网和移动应用平台上的各种新产品和新型商业服务和创新.  
-- 我们是一个开放和自由的社区,任何人都可以加入. 
-- 我们的理念是推动中国的开发者和世界直接接轨,
-- 我们的目标是推动中国的开发者把自己的创新和中国的文化通过谷歌这样的世界平台带向世界,
-- 我们的实践是通过国际性的平台学习国际公开技术,身体力行地支持开源技术,
-- 我们对中国社会的贡献是为年轻人和大学生们指出一条走向一个开放的互联网的道路,彻底跳出和世界隔绝井底之蛙的局限. 
-请加入这一开放的技术社区,共同学习,分享,创新!  
+由爱书人:
+  @绿茶
+  @杨早
+  @邱小石 
+三人发起的读书会，以图书和电影为载体，
+面对面的茶话，分享每一个人独特的阅读体验。
     </pre>
 
-<b>人在珠海,面向全国,心系世界:</b>
+<b>人在书海,面向当下,心系历史:</b>
   <ul>
-    <li>for Developer ~ 为开发者分享我们的代码</li>
-    <li>by Developer ~ 由社区提供友好的支持</li>
-    <li>be Developer ~ 对成为开发者的爱好提供学习帮助</li>
-    <li>as Developer ~ 如开发者般思考/运营整个项目!</li>
+    <li>for Reader ~ 为读书人分享我们的经验</li>
+    <li>by Reader ~ 由社区提供友好的支持</li>
+    <li>be Reader ~ 对回归读书的爱好提供帮助</li>
+    <li>as Reader ~ 如读书人般思考/运营整个项目!</li>
   </ul>
   </p>
 
 <h2>资源发布</h2>
 <p>
   <ol>
-    <li><a href="http://zhgdg.gitcafe.com/static/doc/byte_of_python.html">
-        简明Python教程 ~ A Byte of Python(中译 Py3 版本)</a></li>
+    <li> </li>
   </ol>
 </p>
 
@@ -39,13 +36,13 @@ comments: yes
 <h2>others</h2>
   <p>当前社区 Blog 基于<a href="https://github.com/mojombo/jekyll">Jekyll</a> 托管在
     <b>
-      <a href="https://gitcafe.com/zhgdg/zhgdg">zhgdg/zhgdg - GitCafe</a>
+      <a href="https://gitcafe.com/readerneighbor/readerneighbor/">readerneighbor/readerneighbor - GitCafe</a>
     </b>
   </p>
 
   <p>
     <a href="/atom.xml"><i class="icon-rss"></i>订阅</a> 
-    | <a href="mailto:zhouqi+oss@ijinshan.com"><i class="icon-envelope-alt"></i>联系</a>
+    | <a href="mailto:zhouqi+sns@ijinshan.com"><i class="icon-envelope-alt"></i>联系</a>
   </p>
 </article>
 
