fixed idx links

--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@ type: post
 		<li><a href="https://plus.google.com/116397511848178756417/about">Zoom.Quiet</a></li>
 	</ul>
 	</li>
+	<li>网站
+	<ul>
+		<li><a href="http://techparty.org/">TechParty:珠三角技术沙龙 | 打造泛珠三角技术圈线上线下交流的平台</a>
+			</li>
+		<li><a href="http://pyconchina.github.io/pycoders-weekly-zh/archives.html">Archives | 蠎周刊 | 汇集全球蠎事儿!-)</a>
+			</li>
+		<li><a href="http://readerneighbor.gitcafe.com/">Reader as Neighbor ;-)</a>
+			</li>
+		<li><a href="http://liebao.org.cn/">猎豹开发社 | 共享开发的乐趣;-)</a>
+			</li>
+	</ul>
+	</li>
+
 </ul>
 </article>
 </section>
