--- a/about.html
+++ b/about.html
@@ -23,14 +23,35 @@ comments: yes
     <li>as Reader ~ 如读书人般思考/运营整个项目!</li>
   </ul>
   </p>
+<h2>邻居设计</h2>
 
-<h2>资源发布</h2>
 <p>
-  <ol>
-    <li> </li>
-  </ol>
+作为邻居专用设计师, ｀胡颖` 为邻居设计了大量对味儿的设计: 
+  <ul>
+    <li>
+        </li>
+    <li>
+        </li>
+  </ul>
 </p>
 
+<h2>资源发布</h2>
+
+<p>
+  <ol>
+    <li><a href="https://read.douban.com/ebook/3442667/">阅读邻居第23期 - 豆瓣阅读 
+        </a>
+        </li>
+    <li><a href="http://ydlj.qiniudn.com/pdf/index.html">阅读邻居-往期活动-纪实 pdf</a>
+        </li>
+    <li><a href="http://zoomq.qiniudn.com/ReadNeighbor/index.html">阅读邻居-往期活动-DAMA 录音</a>
+        </li>
+    <li>
+        </li>
+    <li>
+        </li>
+  </ol>
+</p>
 
 
 <h2>others</h2>
