--- a/about.html
+++ b/about.html
@@ -31,15 +31,18 @@ $(document).ready(function(){
 
 
   <h2>阅读邻居</h2>
-  <p><pre>
+  <p>
 由爱书人:
-  @绿茶
-  @杨早
-  @邱小石 
+    <img src="http://tp4.sinaimg.cn/1644081727/30/1279883004/1"/>
+        <a href="http://weibo.com/chakefusiji">@绿茶</a>
+    ;<img src="http://tp3.sinaimg.cn/1662059594/30/5652523042/1"/>
+        <a href="http://weibo.com/qiuxiaoshi">@邱小石</a>
+    ;<img src="http://tp4.sinaimg.cn/1194991743/30/1279875308/1"/>
+        <a href="http://weibo.com/gaofu">@杨早</a>    
+<br/>
 三人发起的读书会，以图书和电影为载体，
 面对面的茶话，分享每一个人独特的阅读体验。
-    </pre>
-
+    
 <b>人在书海,面向当下,心系历史:</b>
   <ul>
     <li>for Reader ~ 为读书人分享我们的经验</li>
