--- a/about.html
+++ b/about.html
@@ -87,11 +87,25 @@ $(document).ready(function(){
     <b>
       <a href="https://gitcafe.com/readerneighbor/readerneighbor/">readerneighbor/readerneighbor - GitCafe</a>
     </b>
+<hr/>
+<b>网站维护纪要:</b>
+  <ul>
+    <li>
+        </li>
+    <li>140509 追加 TOC 支持, 增补统一缀文,包含活动各种固定资源/信息..
+        </li>
+    <li>140328 增补样式,首页分页,追加作者信息
+        </li>
+    <li>131019 上线
+        </li>
+  </ul>
+</p>
+
   </p>
 
   <p>
     <a href="/atom.xml"><i class="icon-rss"></i>订阅</a> 
-    | <a href="mailto:zhouqi+sns@ijinshan.com"><i class="icon-envelope-alt"></i>联系</a>
+    | <a href="mailto:i@zoomquiet.io"><i class="icon-envelope-alt"></i>联系</a>
   </p>
 </article>
 
