增补配置,作者 gittip,以及 support@yuedulinju.com

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@ $(document).ready(function(){
 
   <p>
     <a href="/atom.xml"><i class="icon-rss"></i>订阅</a> 
-    | <a href="mailto:i@zoomquiet.io"><i class="icon-envelope-alt"></i>联系</a>
+    | <a href="mailto:support@yuedulinju.com"><i class="icon-envelope-alt"></i>联系</a>
   </p>
 </article>
 
