增补配置,作者 gittip,以及 support@yuedulinju.com++

--- a/about.html
+++ b/about.html
@@ -107,6 +107,11 @@ $(document).ready(function(){
 
   </p>
 
+
+  <p>
+    <a href="/atom.xml"><i class="icon-rss"></i>订阅</a> 
+    | <a href="mailto:support@yuedulinju.com"><i class="icon-envelope-alt"></i>联系</a>
+  </p>
 </article>
 
 <section>
