--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@ $(document).ready(function(){
 
   <p>
     <a href="/atom.xml"><i class="icon-rss"></i>订阅</a> 
-    | <a href="mailto:support@yuedulinju.com"><i class="icon-envelope-alt"></i>联系</a>
+    | <a href="mailto:support@yuedulinju.me"><i class="icon-envelope-alt"></i>联系</a>
   </p>
 </article>
 
